# qtractor

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.cvs  Makefile.git  Makefile.in  Makefile.svn  README  README.VST  README.VST2  README.VST3  README.cmake  README.md  TODO  TRANSLATORS  autogen.sh  configure.ac  qtractor.1  qtractor.desktop.in  qtractor.pro  qtractor.pro.in  qtractor.spec.in
.github/workflows/: build.yml
debian/: changelog  control  copyright  docs  rules
icons/: qtractor.qrc
lv2/: lv2_saverestore.h  lv2_uri_map.h
rpm/: qtractor.spec
src/: CMakeLists.txt  cmake_config.h.in  config.h.cmake  main.cpp  org.rncbc.qtractor.desktop  qtractor.cpp  qtractor.desktop  qtractor.desktop.in  qtractor.h  qtractor.qrc  qtractorAbout.h  qtractorActionControl.cpp  qtractorActionControl.h  qtractorAtomic.h  qtractorAuPlugin.cpp  qtractorAuPlugin.h  qtractorAudioBuffer.cpp  qtractorAudioBuffer.h  qtractorAudioClip.cpp  qtractorAudioClip.h  qtractorAudioConnect.cpp  qtractorAudioConnect.h  qtractorAudioEngine.cpp  qtractorAudioEngine.h  qtractorAudioFile.cpp  qtractorAudioFile.h  qtractorAudioIOMatrixForm.cpp  qtractorAudioIOMatrixForm.h  qtractorAudioIOMatrixForm.ui  qtractorAudioListView.cpp  qtractorAudioListView.h  qtractorAudioMadFile.cpp  qtractorAudioMadFile.h  qtractorAudioMeter.cpp  qtractorAudioMeter.h  qtractorAudioMonitor.cpp  qtractorAudioMonitor.h  qtractorAudioPeak.cpp  qtractorAudioPeak.h  qtractorAudioSndFile.cpp  (+332 more)
src/appdata/: org.rncbc.qtractor.desktop  org.rncbc.qtractor.metainfo.xml  qtractor.appdata.xml
src/instruments/: Standard1.ins
src/lv2/: lv2_atom.h  lv2_atom_helpers.h  lv2_data_access.h  lv2_event.h  lv2_event_helpers.h  lv2_external_ui.h  lv2_instance_access.h  lv2_midnam.h  lv2_persist.h  lv2_port_change_request.h  lv2_programs.h  lv2_state.h  lv2_ui.h  lv2_uri_map.h  lv2_urid.h
src/man1/: qtractor.1  qtractor.fr.1
src/mimetypes/: org.rncbc.qtractor.xml  qtractor.xml
src/palette/: KXStudio.conf  Wonton Soup.conf
src/translations/: qtractor_cs.ts  qtractor_de.ts  qtractor_es.ts  qtractor_fr.ts  qtractor_it.ts  qtractor_ja.ts  qtractor_pt.ts  qtractor_pt_BR.ts  qtractor_ru.ts  qtractor_uk.ts  qtractor_zh_CN.ts
src/vestige/: aeffectx.h  vestige.h
win32/: config.h  qtractor.pro
